--- a/css/template.css
+++ b/css/template.css
@@ -1,7 +1,7 @@
-* {
+/* * {
 
   transition: .4s;
-} 
+}  */
 .item {
     height: 100%; 
 } 
@@ -20,12 +20,12 @@
 }
 .dropdown { 
   height: 100%;
-  border: 4px solid;
+  border: 4px solid #3d3d3d;
   box-shadow: 5px 5px 2px gray;
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  background-image: url('../assets/images/ex-images/question-mark.png');
+  background-image: url('../assets/images/ex-images/question-mark.jpg');
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
