--- a/css/template.css
+++ b/css/template.css
@@ -56,6 +56,17 @@
   border-bottom: 20px solid black;
   z-index: 999999999999999999;
 }
+
+/* .dropdown.show .options::before {
+  content: "";
+  position: absolute;
+  top: -19px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 20px solid transparent;
+  border-top: 20px solid black;
+  z-index: 999999999999999999;
+} */
 .option {
   width: 76px;
   border: 4px solid;
