--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -13,7 +13,7 @@
   .number {
     width: 60px;
     display: inline-block;
-}
+  }
 }
 @media screen and (max-width: 1880px) {
   [type="button"]:not(:disabled) {
@@ -37,7 +37,7 @@
   }
   .controls {
     gap: 10px;
-  } 
+  }
   .h1,
   h1 {
     font-size: 1.8rem;
@@ -51,95 +51,86 @@
   }
 }
 
-@media screen  and (max-width: 768px) {
-.dropdown {
-    min-height: 63px; 
-}
+@media screen and (max-width: 668px) {
+
  
+  .word {
+      width: 135px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0;
+  }
+  .word_text {
+    font-size: 2.5rem;
 }
-@media screen  and (max-width: 1024px) {
-  .number {
-    width: 100px;
-    display: inline-block;
-}
-.options.show {
-   top: 110px;
-}
-.option {
-  width: 100px; 
+
+#audio-player {
+  padding: 5px 17px;
 }
 }
-@media screen  and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
+  section .main_img {
+    width: 180px;
+  }
+  .box {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 720px) {
   .option {
     width: 75px;
-  } 
+  }
   .options.show {
     top: 100px;
-}
-}
-@media screen  and (max-width: 668px) {
-  .option:last-child {
-    border-right: 2px solid black;
-}
-  .dropdown { 
-    border: 2px solid;
   }
-  .questions { 
-    gap: 0.5rem;
 }
-  .options.show { 
-    top: 58px ;
-} 
-.option {
-  border: 2px solid;
-  width: 44px; 
+@media screen and (max-width: 730px) {
+  .chooises {
+    gap: 4rem;
+  }
+  .box {
+    font-size: 1.7rem;
+    padding: 0 18.6px;
+  }
+  section {
+    gap: 0;
+    justify-content: space-around;
+  }
+  section .main_img {
+    width: 120px;
+  }
+  .chooises {
+    gap: 2rem;
+  }
 }
+@media screen and (max-height: 1024px) {
+  .carousel-inner {
+    height: 94%;
+  }
+}
+@media screen and (max-height: 646px) {
+  .controls div img {
+    cursor: pointer;
+    width: 40px;
+  }
+  [type="button"] img {
+    width: 51px;
+  }
 
-.operator {
-  width: 20px;
-  display: inline-block;
-}
-.number {
-  width: 65px; 
-}
-.dropdown {
-  min-height: 31px;
-}
-.questions { 
-  margin-top: -1rem;
-}
+  .title {
+    padding: 19px;
+    background: var(--header-footer-bgcolor);
+    margin: 0;
+    font-size: 2rem;
+  }
 
-}
-@media screen  and (max-height: 1024px) {
-    .carousel-inner {
-        height: 94%;
-    }
-}
-@media screen  and (max-height: 646px) { 
-    .controls div img {
-        cursor: pointer;
-        width: 40px;
-    }
-    [type="button"] img {
-        width: 51px;
-    }
- 
-
-    .title {
-      padding: 19px;
-      background: var(--header-footer-bgcolor);
-      margin: 0;
-    font-size: 2rem
-    }; 
-
-/* ------------------------------------------------------------ */
-
-
+  /* ------------------------------------------------------------ */
 }
 @media screen and (max-width: 676px) and (max-height: 480px) {
-    #carouselExampleIndicators { 
-        top: 7px;
-    }
+  #carouselExampleIndicators {
+    top: 7px;
+  }
   main {
     margin: 0;
   }
@@ -147,11 +138,10 @@
     font-size: 1.5rem;
     margin: 0;
     padding: 6px;
-
   }
   .carousel-inner {
     height: 18rem;
-  } 
+  }
   .controls {
     position: relative;
     display: flex;
@@ -159,11 +149,11 @@
     margin-top: 0;
     gap: 10px;
     font-size: 20px;
-  } 
+  }
   .carousel-inner {
     height: 90%;
     background: white;
-    padding: 10px 15px; 
+    padding: 10px 15px;
   }
 
   .controls img {
@@ -184,25 +174,18 @@
   /* ---------------------------------------------------- */
 }
 
-
-
-
-
-
-
 @media screen and (max-width: 495px) {
- 
+  
   main {
     margin: 0;
     padding: 2rem 10px;
-
   }
   .title {
     font-size: 1.5rem;
   }
   .carousel-inner {
     height: 29rem;
-  } 
+  }
   .controls {
     position: relative;
     display: flex;
@@ -210,7 +193,7 @@
     /* margin-top: 15px; */
     gap: 25px;
     font-size: 20px;
-  }  
+  }
   .controls img {
     width: 60px;
   }
@@ -223,38 +206,23 @@
     margin: 0;
     top: 4px;
   }
+  .carousel-inner {
+    padding: 10px 30px;
+  }
   /* ---------------------------------------------------- */
-
-  .number {
-    width: 100px;
-    display: inline-block;
+  .question { 
+    gap: 2rem;
 }
-.dropdown {
-  min-height: 69px;
-}
-.options.show {
-  /* transform: translateY(65px); */
-}
-.question { 
-  gap: 1rem;
-}
-.correctManual {
-  height: 64px;
-}
-.options.show {
-  top: 106px;
-
-}
-img.wrong {
-  height: 100%;
-}
-.carousel-inner { 
-  padding: 10px 30px; 
+  .word {
+    width: 128px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 }
 @media screen and (max-width: 420px) {
   .options.show {
     top: 90px;
-  
   }
 }
