--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -52,22 +52,42 @@
 }
 
 @media screen and (max-width: 668px) {
-
- 
-  .word {
-      width: 135px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0;
+  #audio-player {
+    padding: 5px ;
   }
-  .word_text {
-    font-size: 2.5rem;
-}
+  /* --------------------------------------- */
+  .letters .letter {
+    font-size: 2rem;
+    margin: 0;
+    width: 60px;
+    height: 60px;
+  }
 
-#audio-player {
-  padding: 5px 17px;
-}
+  .letters {
+    width: 400px;
+    gap: 0.7rem;
+  }
+
+  .answer_letters .ans {
+    width: 32px;
+    background: #dedbdb;
+    padding: 0px 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 5px solid #545353;
+    text-transform: capitalize;
+    height: 58px;
+    color: green;
+  }
+  .answer_letters {
+    gap: 4rem;
+    font-size: 2.4rem;
+    /* font-weight: bold; */
+  }
+  .questions {
+    gap: 2.5rem;
+  }
 }
 @media screen and (max-width: 1024px) {
   section .main_img {
@@ -175,7 +195,6 @@
 }
 
 @media screen and (max-width: 495px) {
-  
   main {
     margin: 0;
     padding: 2rem 10px;
@@ -191,8 +210,9 @@
     display: flex;
     justify-content: center;
     /* margin-top: 15px; */
-    gap: 25px;
+    gap: 10px;
     font-size: 20px;
+    padding: 12px 8px;
   }
   .controls img {
     width: 60px;
@@ -210,16 +230,29 @@
     padding: 10px 30px;
   }
   /* ---------------------------------------------------- */
-  .question { 
+  .question {
     gap: 2rem;
-}
-  .word {
-    width: 128px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  }
+  .answer_letters {
     gap: 1rem;
-}
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+
+  .answer_letters .ans {
+    padding: 0px 2.4rem;
+    font-size: 2.4rem;
+  }
+  .letters {
+    width: 270px;
+    gap: 1.2rem;
+  }
+  .complete {
+    border-width: 2px;
+  }
+  .questions {
+    height: 100%;
+  }
 }
 @media screen and (max-width: 420px) {
   .options.show {
