--- a/css/main.css
+++ b/css/main.css
@@ -105,11 +105,13 @@ main {
 }
 .disabled {
   pointer-events: none;
+  cursor: not-allowed !important;
   opacity: 0.6 !important;
 }
 
 .preventClick {
   pointer-events: none;
+  cursor: not-allowed !important;
 }
 .red_border {
   border: 5px solid rgb(233, 8, 8);
